--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -14,3 +14,11 @@ $(BLD_BIN_DIR)/http$(BLD_EXE): $(BLD_OBJ_DIR)/httpCmd$(BLD_OBJ) $(BLD_LIB_DIR)/l
 	@bld --exe $(BLD_BIN_DIR)/http$(BLD_EXE) --search "$(BLD_MPR_LIBPATHS)" \
 		--libs "http $(BLD_MPR_LIBS) $(BLD_SSL_LIBS)" httpCmd
 
+
+#
+#   Local variables:
+#   tab-width: 4
+#   c-basic-offset: 4
+#   End:
+#   vim: sw=4 ts=4
+#
