--- a/doc/api/http/Makefile
+++ b/doc/api/http/Makefile
@@ -28,3 +28,11 @@ cleanExtra:
 
 clobberExtra:
 	rm -f ../$(NAME).html ../$(NAME)Bare.html
+
+#
+#   Local variables:
+#   tab-width: 4
+#   c-basic-offset: 4
+#   End:
+#   vim: sw=4 ts=4
+#
