--- a/projects/MACOSX/Makefile
+++ b/projects/MACOSX/Makefile
@@ -8,3 +8,11 @@ include 	.makedep
 
 cleanExtra:
 	rm -fr */build 
+
+#
+#   Local variables:
+#   tab-width: 4
+#   c-basic-offset: 4
+#   End:
+#   vim: sw=4 ts=4
+#
