--- a/projects/WIN/http-dynamic/Makefile
+++ b/projects/WIN/http-dynamic/Makefile
@@ -54,3 +54,11 @@ http.vcproj: Makefile buildConfig.override
 
 cleanExtra:
 	rm -rf Upgrade* _Upgrade* *.old
+
+#
+#   Local variables:
+#   tab-width: 4
+#   c-basic-offset: 4
+#   End:
+#   vim: sw=4 ts=4
+#
