--- a/src/Makefile
+++ b/src/Makefile
@@ -19,3 +19,11 @@ compileExtra: $(TARGET)
 $(TARGET): $(OBJECTS)
 	bld --library $(BLD_LIB_DIR)/libhttp --search "$(BLD_MPR_LIBPATHS) $(BLD_SSL_LIBPATHS)" \
 		--libs "$(BLD_SSL_LIBS) $(BLD_MPR_LIBS)" $(OBJECTS)
+
+#
+#   Local variables:
+#   tab-width: 4
+#   c-basic-offset: 4
+#   End:
+#   vim: sw=4 ts=4
+#
