Add noexpandtab to Makefile

--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -20,5 +20,5 @@ $(BLD_BIN_DIR)/http$(BLD_EXE): $(BLD_OBJ_DIR)/httpCmd$(BLD_OBJ) $(BLD_LIB_DIR)/l
 #   tab-width: 4
 #   c-basic-offset: 4
 #   End:
-#   vim: sw=4 ts=4
+#   vim: sw=4 ts=4 noexpandtab
 #
