--- a/src/utils/Makefile
+++ b/src/utils/Makefile
@@ -10,9 +10,9 @@ TARGETS			+= $(BLD_BIN_DIR)/http$(BLD_EXE)
 
 compileExtra: $(TARGETS) 
 
-$(BLD_BIN_DIR)/http$(BLD_EXE): $(BLD_OBJ_DIR)/httpCmd$(BLD_OBJ) $(BLD_LIB_DIR)/libhttp$(BLD_LIB)
+$(BLD_BIN_DIR)/http$(BLD_EXE): $(BLD_OBJ_DIR)/http$(BLD_OBJ) $(BLD_LIB_DIR)/libhttp$(BLD_LIB)
 	@bld --exe $(BLD_BIN_DIR)/http$(BLD_EXE) --search "$(BLD_MPR_LIBPATHS)" \
-		--libs "http $(BLD_MPR_LIBS) $(BLD_SSL_LIBS)" httpCmd
+		--libs "http $(BLD_MPR_LIBS) $(BLD_SSL_LIBS)" http
 
 
 #
