--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -3,16 +3,21 @@
 #
 #	Copyright (c) Embedthis Software LLC, 2003-2011. All Rights Reserved.
 #
-BUILD_DEPTH	?= 2
 
-include 	.makedep
+BUILD_DEPTH		?= 2
 
-TARGETS		= $(BLD_BIN_DIR)/testHttp$(BLD_EXE)
-OBJECTS		= $(patsubst %.c,$(BLD_OBJ_DIR)/%$(BLD_OBJ),$(wildcard test*.c))
+include 		.makedep
+
+MAKE_IFLAGS		= $(BLD_MPR_IFLAGS)
+TARGETS			+= $(BLD_BIN_DIR)/testHttp$(BLD_EXE)
+OBJECTS			= $(patsubst %.c,$(BLD_OBJ_DIR)/%$(BLD_OBJ),$(wildcard test*.c))
 
 compileTargets:	$(TARGETS)
 
-$(BLD_BIN_DIR)/testHttp$(BLD_EXE): $(OBJECTS) $(BLD_LIB_DIR)/libmpr$(BLD_LIB)
+x:
+	echo IF $(MAKE_IFLAGS)
+
+$(BLD_BIN_DIR)/testHttp$(BLD_EXE): $(OBJECTS)
 	bld --exe $(BLD_BIN_DIR)/testHttp$(BLD_EXE) --search "$(BLD_MPR_LIBPATHS)" --libs "mpr $(BLD_SSL_LIBS) http" $(OBJECTS)
 
 cleanExtra:
