Update tools Fix unit tests when cross compiling

--- a/src/test/Makefile
+++ b/src/test/Makefile
@@ -21,8 +21,10 @@ $(BLD_BIN_DIR)/testHttp$(BLD_EXE): $(OBJECTS)
 cleanExtra:
 	rm -f trace*.txt *.txt.old
 
+ifeq	($(BLD_CROSS),0)
 testExtra:
 	testHttp -v
+endif
 
 #
 #   Local variables:
