--- a/src/Makefile
+++ b/src/Makefile
@@ -6,9 +6,9 @@
 
 include			.makedep
 
-PRE_DIRS		+= deps stages
+PRE_DIRS		+= include deps stages
 POST_DIRS		+= utils test
-MAKE_IFLAGS		+= $(BLD_MPR_IFLAGS)
+# MAKE_IFLAGS		+= $(BLD_MPR_IFLAGS)
 
 TARGET			+= $(BLD_LIB_DIR)/libhttp$(BLD_LIB)
 
