--- a/src/deps/Makefile
+++ b/src/deps/Makefile
@@ -9,8 +9,7 @@ include			.makedep
 ifeq ($(BLD_MPR_BUILTIN),1)
 	PRE_DIRS    += mpr
 else
-	CLOBBER		+= mpr/*.c mpr/*.h
-	IMPORTS     += $(BLD_MPR_IMPORTS) $(BLD_SSL_IMPORTS)
+	IMPORTS     += $(BLD_SSL_IMPORTS)
 endif
 
 IMPORTED    	+= $(patsubst %,$(BLD_LIB_DIR)/%, $(notdir $(IMPORTS)))
@@ -19,9 +18,6 @@ compileFirst:	$(IMPORTED)
 
 $(IMPORTED): $(IMPORTS)
 	getlib $^
-
-clobberExtra:
-	rm -f $(CLOBBERIT)
 
 #
 #   Local variables:
