Update ejs unit tests

--- a/src/test/appweb/appweb.conf
+++ b/src/test/appweb/appweb.conf
@@ -2,71 +2,48 @@
 #   appweb.conf -- Appweb configuration MPR testing
 #   
 
-<if LOG>
-    ErrorLog stdout
-    LogLevel 0
-</if>
+ErrorLog stderr
+LogLevel 0
 
-Listen 6600
+Listen 6600         # MAIN - dont remove comment
 DocumentRoot "web"
-DirectoryIndex index.html
-LoadModulePath "../../../appweb/modules:/usr/lib/appweb/modules:../../../appweb/modules"
+# DirectoryIndex index.html
+# LoadModulePath "../../../appweb/modules:/usr/lib/appweb/modules:../../../appweb/modules"
 PutMethod on
 
-SetConnector netConnector
+SetConnector    netConnector
+AddInputFilter  authFilter
+AddOutputFilter rangeFilter
+AddFilter       chunkFilter
+AddInputFilter  uploadFilter
+AddHandler      fileHandler html git jpeg jpg png pdf ico css js
 
-<if AUTH_MODULE>
-    LoadModule authFilter mod_auth
-    AddOutputFilter authFilter
-</if>
-<if RANGE_MODULE>
-    LoadModule rangeFilter mod_range
-    AddOutputFilter rangeFilter
-</if>
-<if CHUNK_MODULE>
-    LoadModule chunkFilter mod_chunk
-    AddFilter chunkFilter
-</if>
-<if DIR_MODULE>
-    LoadModule dirHandler mod_dir
-    AddHandler dirHandler
-    Options Indexes
-    IndexOrder ascending name
-    IndexOptions FancyIndexing FoldersFirst
-</if>
+UploadDir tmp
+UploadAutoDelete on
+
+AddHandler dirHandler
+Options Indexes
+IndexOrder ascending name
+IndexOptions FancyIndexing FoldersFirst
+
 <if EJS_MODULE>
     LoadModule ejsHandler mod_ejs
-    AddHandler ejsHandler .ejs
-    EjsErrors browser
-    EjsSession off
-    EjsSessionTimeout 1800
-</if>
-<if UPLOAD_MODULE>
-    LoadModule uploadFilter mod_upload
-    UploadDir .
-    UploadAutoDelete on
-    AddInputFilter uploadFilter
-</if>
-<if FILE_MODULE>
-    LoadModule fileHandler mod_file
-    AddHandler fileHandler .html .gif .jpeg .png .pdf ""
+    AddHandler ejsHandler ejs es
 </if>
 
-<if AUTH_MODULE>
-    AuthGroupFile groups.db
-    AuthUserFile users.db
-    AuthDigestQop auth
-    <Directory $DOCUMENT_ROOT/basic>
-        AuthType basic
-        AuthName "Acme Inc"
-        Require valid-user
-    </Directory>
-    <Directory $DOCUMENT_ROOT/digest>
-        AuthType digest
-        AuthName "Acme Inc"
-        Require valid-user
-    </Directory>
-</if>
+AuthGroupFile groups.db
+AuthUserFile users.db
+AuthDigestQop auth
+<Directory $DOCUMENT_ROOT/basic>
+    AuthType basic
+    AuthName "Acme Inc"
+    Require valid-user
+</Directory>
+<Directory $DOCUMENT_ROOT/digest>
+    AuthType digest
+    AuthName "Acme Inc"
+    Require valid-user
+</Directory>
 
 <if SSL_MODULE>
     Listen 6610     # SSL - dont remove comment
@@ -98,3 +75,4 @@ LimitRequestBody      100000000
 LimitUploadSize       100000000
 LimitResponseBody     100000000
 
+AddHandler fileHandler 
