--- a/src/deps/Makefile
+++ b/src/deps/Makefile
@@ -6,6 +6,9 @@
 
 include			.makedep
 
+ifeq ($(BLD_PCRE_BUILTIN),1)
+	PRE_DIRS    += pcre
+endif
 ifeq ($(BLD_MPR_BUILTIN),1)
 	PRE_DIRS    += mpr
 else
