--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ bin/testHttp
 bin/http
 build/bin/buildConfig.sh
 doc/api/http/xml
-doc/api/mpr
+doc/api/http/html
 src/include/buildConfig.h
 *.mod
 buildConfig.make
