--- a/projects/WIN/http-dynamic/libhttp.vcproj
+++ b/projects/WIN/http-dynamic/libhttp.vcproj
@@ -1,289 +1,108 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<VisualStudioProject
-    ProjectType="Visual C++"
-    Version="8.00"
-    Name="libhttp"
-    ProjectGUID="436e5fbc-1543-4b5b-a0e7-786746f017b1"
-    RootNamespace=""
-    Keyword="Win32Proj"
-    TargetFrameworkVersion="0"
-    >
-    <Platforms>
-        <Platform
-            Name="Win32"
-        />
-    </Platforms>
-    <ToolFiles>
-    </ToolFiles>
-    <Configurations>
-        <Configuration
-            Name="Release|Win32"
-            OutputDirectory="$(PlatformName)\$(ConfigurationName)"
-            IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-            ConfigurationType="2"
-            CharacterSet="0"
-            >
-            <Tool
-                Name="VCPreBuildEventTool"
-            />
-<Tool Name="VCCustomBuildTool" />
-            <Tool
-                Name="VCManagedResourceCompilerTool"
-            />
-            <Tool
-                Name="VCResourceCompilerTool"
-            />
-            <Tool
-                Name="VCPreLinkEventTool"
-            />
-            <Tool
-                Name="VCALinkTool"
-            />
-            <Tool
-                Name="VCManifestTool"
-            />
-            <Tool
-                Name="VCXDCMakeTool"
-            />
-            <Tool
-                Name="VCBscMakeTool"
-            />
-            <Tool
-                Name="VCFxCopTool"
-            />
-            <Tool
-                Name="VCAppVerifierTool"
-            />
-            <Tool
-                Name="VCPostBuildEventTool"
-            />
-            <Tool
-                Name="VCCLCompilerTool"
-                UsePrecompiledHeader="0"
-                WarningLevel="3"
-                ExceptionHandling="0"
-                CompileAs="0"
-                StringPooling="true"
-                MinimalRebuild="true"
-                AdditionalIncludeDirectories="../../../out/include;../../../src/include"
-                PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;DEBUG_IDE;_REENTRANT;_MT"
-                Optimization="1"
-                FavorSizeOrSpeed="1"
-                RuntimeLibrary="2"
-                DebugInformationFormat="3"
-                EnableIntrinsicFunctions="true"
-                EnableFunctionLevelLinking="true"
-            />
-            <Tool
-                Name="VCLinkerTool"
-                AdditionalLibraryDirectories="$(OutDir)"
-                AdditionalDependencies="libmpr.lib ws2_32.lib"
-                ModuleDefinitionFile="libhttp.def"
-                Targetmachine="1"
-                SubSystem="1"
-                LinkIncremental="1"
-                GenerateDebugInformation="false"
-                OptimizeReferences="2"
-                EnableCOMDATAFolding="2"
-            />
-        </Configuration>
-        <Configuration
-            Name="Debug|Win32"
-            OutputDirectory="$(PlatformName)\$(ConfigurationName)"
-            IntermediateDirectory="$(PlatformName)\$(ConfigurationName)"
-            ConfigurationType="2"
-            CharacterSet="0"
-            >
-            <Tool
-                Name="VCPreBuildEventTool"
-            />
-<Tool Name="VCCustomBuildTool" />
-            <Tool
-                Name="VCManagedResourceCompilerTool"
-            />
-            <Tool
-                Name="VCResourceCompilerTool"
-            />
-            <Tool
-                Name="VCPreLinkEventTool"
-            />
-            <Tool
-                Name="VCALinkTool"
-            />
-            <Tool
-                Name="VCManifestTool"
-            />
-            <Tool
-                Name="VCXDCMakeTool"
-            />
-            <Tool
-                Name="VCBscMakeTool"
-            />
-            <Tool
-                Name="VCFxCopTool"
-            />
-            <Tool
-                Name="VCAppVerifierTool"
-            />
-            <Tool
-                Name="VCPostBuildEventTool"
-            />
-            <Tool
-                Name="VCCLCompilerTool"
-                UsePrecompiledHeader="0"
-                WarningLevel="3"
-                ExceptionHandling="0"
-                CompileAs="0"
-                StringPooling="true"
-                MinimalRebuild="true"
-                AdditionalIncludeDirectories="../../../out/include;../../../src/include"
-                PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;DEBUG_IDE;_REENTRANT;_MT"
-                Optimization="0"
-                FavorSizeOrSpeed="1"
-                BasicRuntimeChecks="3"
-                RuntimeLibrary="3"
-                DebugInformationFormat="4"
-            />
-            <Tool
-                Name="VCLinkerTool"
-                AdditionalLibraryDirectories="$(OutDir)"
-                AdditionalDependencies="libmpr.lib ws2_32.lib"
-                ModuleDefinitionFile="libhttp.def"
-                Targetmachine="1"
-                SubSystem="1"
-                LinkIncremental="2"
-                GenerateDebugInformation="true"
-            />
-        </Configuration>
-    </Configurations>
-    <References>
-    </References>
-    <Files>
-        <Filter
-            Name="Header Files"
-            Filter="h;hpp;hxx;hm;inl;inc;xsd"
-            UniqueIdentifier="{1cc110dc-ed6d-408a-b799-e3748edb6c85}"
-            >
-            <File
-                RelativePath="..\..\..\out\include\buildConfig.h"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\include\http.h"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\include\mpr.h"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\include\mprSsl.h"
-                >
-            </File>
-        </Filter>
-        <Filter
-            Name="Source Files"
-            Filter="cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx"
-            UniqueIdentifier="{072ca75c-b6b6-4e4a-a18c-02a37d062ee5}"
-            >
-            <File
-                RelativePath="..\..\..\src\auth.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\authFile.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\authFilter.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\authPam.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\chunkFilter.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\client.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\conn.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\env.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\httpService.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\location.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\netConnector.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\packet.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\passHandler.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\pipeline.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\queue.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\rangeFilter.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\rx.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\sendConnector.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\server.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\stage.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\trace.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\tx.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\uploadFilter.c"
-                >
-            </File>
-            <File
-                RelativePath="..\..\..\src\uri.c"
-                >
-            </File>
-        </Filter>
-    </Files>
-    <Globals>
-    </Globals>
-</VisualStudioProject>
+<?xml version="1.0" encoding="utf-8"?>
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+
+  <ItemGroup Label="ProjectConfigurations">
+    <ProjectConfiguration Include="Debug|Win32">
+      <Configuration>Debug</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
+    <ProjectConfiguration Include="Release|Win32">
+      <Configuration>Release</Configuration>
+      <Platform>Win32</Platform>
+    </ProjectConfiguration>
+  </ItemGroup>
+
+  <PropertyGroup Label="Globals">
+    <ProjectGuid>{B3F543B5-6B54-4D28-B53C-96D77E79889D}</ProjectGuid>
+    <RootNamespace />
+    <Keyword>Win32Proj</Keyword>
+  </PropertyGroup>
+
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <CharacterSet>NotSet</CharacterSet>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
+    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <CharacterSet>NotSet</CharacterSet>
+  </PropertyGroup>
+
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.props" />
+
+  <ImportGroup Label="ExtensionSettings">
+  </ImportGroup>
+
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    
+    <Import Project="debug.props" />
+  </ImportGroup>
+
+  <ImportGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="PropertySheets">
+    <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
+    
+    <Import Project="release.props" />
+  </ImportGroup>
+
+  <PropertyGroup Label="UserMacros" />
+
+  <PropertyGroup>
+    <_ProjectFileVersion>10.0.30319.1</_ProjectFileVersion>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\..\..\out\bin\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">..\..\..\out\obj\</IntDir>
+    <OutDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\..\out\bin\</OutDir>
+    <IntDir Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">..\..\..\out\obj\</IntDir>
+  </PropertyGroup>
+
+  <ItemGroup>
+    <ClInclude Include="..\..\..\out\include\buildConfig.h" />
+  </ItemGroup>
+
+  <ItemGroup >
+    <ClCompile Include="..\..\..\src\auth.c" />
+    <ClCompile Include="..\..\..\src\authCheck.c" />
+    <ClCompile Include="..\..\..\src\authFile.c" />
+    <ClCompile Include="..\..\..\src\authPam.c" />
+    <ClCompile Include="..\..\..\src\chunkFilter.c" />
+    <ClCompile Include="..\..\..\src\client.c" />
+    <ClCompile Include="..\..\..\src\conn.c" />
+    <ClCompile Include="..\..\..\src\endpoint.c" />
+    <ClCompile Include="..\..\..\src\error.c" />
+    <ClCompile Include="..\..\..\src\host.c" />
+    <ClCompile Include="..\..\..\src\httpService.c" />
+    <ClCompile Include="..\..\..\src\netConnector.c" />
+    <ClCompile Include="..\..\..\src\packet.c" />
+    <ClCompile Include="..\..\..\src\passHandler.c" />
+    <ClCompile Include="..\..\..\src\pipeline.c" />
+    <ClCompile Include="..\..\..\src\queue.c" />
+    <ClCompile Include="..\..\..\src\rangeFilter.c" />
+    <ClCompile Include="..\..\..\src\route.c" />
+    <ClCompile Include="..\..\..\src\rx.c" />
+    <ClCompile Include="..\..\..\src\sendConnector.c" />
+    <ClCompile Include="..\..\..\src\stage.c" />
+    <ClCompile Include="..\..\..\src\trace.c" />
+    <ClCompile Include="..\..\..\src\tx.c" />
+    <ClCompile Include="..\..\..\src\uploadFilter.c" />
+    <ClCompile Include="..\..\..\src\uri.c" />
+    <ClCompile Include="..\..\..\src\var.c" />
+  </ItemGroup>
+
+  <ItemDefinitionGroup>
+    <Link>
+      <ModuleDefinitionFile>libhttp.def</ModuleDefinitionFile>
+    </Link>
+  </ItemDefinitionGroup>
+
+  <ItemDefinitionGroup >
+    <Link>
+      <AdditionalDependencies>libmpr.lib;ws2_32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
+  </ItemDefinitionGroup>
+  <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
+
+  <ImportGroup Label="ExtensionTargets">
+  </ImportGroup>
+</Project>
