--- a/.gitignore
+++ b/.gitignore
@@ -52,8 +52,6 @@ local.bit
 *-debug
 *-release
 xcode
-macosx-x86_64.bit
-*-*.bit
-linux-i686.bit
-*-debug.bit
-*-release.bit
+/*-*.bit
+/*-*-debug/
+/*-*-release/
