Remove hard link of libhttp to libmprssl

--- a/projects/http-windows/libhttp.vcxproj
+++ b/projects/http-windows/libhttp.vcxproj
@@ -142,7 +142,7 @@
 
   <ItemDefinitionGroup>
   <Link>
-    <AdditionalDependencies>libmpr.lib;libpcre.lib;libmprssl.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    <AdditionalDependencies>libmpr.lib;libpcre.lib;%(AdditionalDependencies)</AdditionalDependencies>
     <AdditionalLibraryDirectories>$(OutDir);$(Cfg)\bin;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
   </Link>
 
@@ -164,13 +164,6 @@ cd projects\http-windows</Command>
 <ItemGroup>
   <ProjectReference Include="libpcre.vcxproj">
   <Project>42d2a7df-906e-4baf-9432-ce3a9124cfd9</Project>
-  <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-  </ProjectReference>
-</ItemGroup>
-
-<ItemGroup>
-  <ProjectReference Include="libmprssl.vcxproj">
-  <Project>2e9536a1-2ad1-4ee1-af03-10e9c06ec4e1</Project>
   <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
   </ProjectReference>
 </ItemGroup>
