Fix http projects

--- a/projects/http-windows/http.vcxproj
+++ b/projects/http-windows/http.vcxproj
@@ -100,7 +100,7 @@
   </PropertyGroup>
   
   <ItemGroup>
-    <ClCompile Include="..\..\src\utils\http.c" />
+    <ClCompile Include="..\..\src\http.c" />
   </ItemGroup>
 
   <ItemDefinitionGroup>
